fix: actions gap

--- a/src/app/[ticker]/ProtocolBalance/ProtocolBalance.module.css
+++ b/src/app/[ticker]/ProtocolBalance/ProtocolBalance.module.css
@@ -51,7 +51,7 @@
 
 .actions {
   display: flex;
-  gap: 12px;
+  gap: 20px;
   margin: 0;
 }
 
